--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html espacio lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewreport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="estilocasa.css">
+        <link  rel="stylesheet"  href="css/estilocasa.css">
         <title>Bienvenido
         </title>
     </head>
