--- a/menu.html
+++ b/menu.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewreport" content="width=device-width, initial-scale=1.0">
-        <link href="css/estilo.css" rel="stylesheet">
+        <link  rel="stylesheet" href="css/estilo.css" >
         <title>Inicio
         </title>
     </head>
     <body>
     <header id="headerIn">
         <h1 id="tituloIn">Tecnologias ITT</h1>
-        <span id="alinearContenidosIndex">
+        <span id="alinearContenidosIndex"></span>
+        <span id="contenidosIndex">
             <a class="linkIndex" href="">Inicio</a>
             <a class="linkIndex" href="">Productos</a>
             <a class="linkIndex" href="">Contacto</a>
@@ -26,14 +27,14 @@
         </a>
             <div id="imgheader">
                 <h2 id="tituloimagenheader">
-                    disfruta de la tecnologia
+                    La tecnologia es innovadora
                 </h2>
-                <img id="imgImagenheader" src="https://image.freepik.com/free-photo/modern-office-with-office-supplies-table-with-office-environment-background_67155-5307.jpg">
+                <img id="imgImagenheader" src="../PS1-practica-semanal/imagen/oh si.jpg">
             </div>
         </header>
         <div id="contenedorBodyIndex">
             <div class="descripcionIndex">
-                <img class="descripcionImgageindex" src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4q3JG?ver=1f8b&q=60&m=6&h=384&w=768&b=%23FFFFFFFF&l=f&o=t&aim=true">
+                <img class="descripcionImagenindex" src="../PS1-practica-semanal/imagen/Quienes somos.jpg">
                 <h3 class="subtitulobodyindex">
                     Quienes somos?
                 </h3>
@@ -42,8 +43,8 @@
                 </p>
             </div>
             <div class="descripcionIndex">
-                <img class="descripcionImagenIndex" src="https://images.pexels.com/photos/1957477/pexels-photo-1957477.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-                <h3 class="subtituloBodyIndex">
+                <img class="descripcionImagenindex" src="../PS1-practica-semanal/imagen/tecnologia-2020-tec-1.jpg">
+                <h3 class="subtitulobodyindex">
                     Que hacemos
                 </h3>
                 <p>
@@ -51,8 +52,8 @@
                 </p>
             </div>
             <div class="descripcionIndex">
-                <img class="descripcionImagenIndex" src="https://img.etimg.com/thumb/width-640,height-480,imgsize-556764,resizemode-1,msid-73083764/magazines/panache/aiming-to-avoid-workplace-stress-in-the-new-year-keeping-small-plants-at-your-office-desk-can-help/istock-841526196.jpg">
-            <h3 class="subtituloBodyIndex">
+                <img class="descripcionImagenindex" src="https://img.etimg.com/thumb/width-640,height-480,imgsize-556764,resizemode-1,msid-73083764/magazines/panache/aiming-to-avoid-workplace-stress-in-the-new-year-keeping-small-plants-at-your-office-desk-can-help/istock-841526196.jpg">
+            <h3 class="subtitulobodyindex">
                 Donde estamos
             </h3>
             <p>
@@ -62,7 +63,7 @@
         </div>
         <footer id="pie">Oscar Eduardo Galaviz Lona
             <br>
-            Derechos Reservados© 
+            2020 Derechos Reservados© 
         </footer>
     </body>
 </html>
