--- a/contacto.html
+++ b/contacto.html
@@ -30,10 +30,10 @@
         </header>
         <!--Empieza aqui los cambios-->
         <div id="tituloinfo">Info technologies</div>
-        <div class="Cleft Cimage-left Cback-imag">
-            
+        <a class="Conleft Conimage-left" href="https://web.whatsapp.com">
+            <img class="Conback-imag Conleft Conimage-left" src="../PS1-practica-semanal/imagen/whats.jpg">
             <!-- <img src="images/card.jpg" alt="" class="img-block"> -->
-        </div>
+        </a>
         <div>               
                 <div>                    
                         <div>
@@ -47,7 +47,8 @@
                         <div>
                             <label for="" class="textoetiqueta">Mensaje:</label>
                             <textarea name="" id="area" cols="30" rows="10"></textarea>
-                        </div>                    
+                        </div>  
+                        <a id="boton" href="">Enviar</a>                  
                 </div>
         </div>
         <!--hasta aqui-->
