--- a/productos.html
+++ b/productos.html
@@ -105,12 +105,12 @@
             </p>
         </div>
         <div class="descripcionproducto">
-            <img class="descripcionproductoimagen" src="../PS1-practica-semanal/imagen/spinner.jpg">
+            <img class="descripcionproductoimagen" src="../PS1-practica-semanal/imagen/teclado.jpg">
             <h3 class="subtituloproducto">
-                Spinner 9000000$ 
+                teclado 500$ 
             </h3>
             <p>
-                Fidget spinner, vuela, corre, pasea a tu perro, carga tu celular y ademas paga tus facturas y golpea a tus vecinos
+                Teclado mecanico para que machaques esos botones y hacer ruidos y tiene rgb
             </p>
         </div>
         <footer id="pie">Oscar Eduardo Galaviz Lona
