--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
     <Body>
         
         <header id="headerIn">
-            <h1 id="tituloIn">Tecnologias ITT</h1>
+            <h1 id="tituloIn">Tecnologia Aurorus</h1>
             <span id="alinearContenidosIndex"></span>
             <span id="contenidosIndex">
                 <a class="linkIndex" href="menu.html">Inicio</a>
@@ -29,11 +29,10 @@
             </a>
         </header>
         <!--Empieza aqui los cambios-->
-        <div id="tituloinfo">Info technologies</div>
-        <a class="Conleft Conimage-left" href="https://web.whatsapp.com">
-            <img class="Conback-imag Conleft Conimage-left" src="../PS1-practica-semanal/imagen/whats.jpg">
-            <!-- <img src="images/card.jpg" alt="" class="img-block"> -->
-        </a>
+        <div id="tituloinfo">Tecnologia Aurorus</div>
+        <label for="" class="textoetiqueta ">TecAurorus@gmail.com</label>
+        <label for="" class="textoetiqueta ">Whatsapp: 66445032096</label>
+        <label for="" class="textoetiqueta ">Direccion: Avenida cucapah</label>
         <div>               
                 <div>                    
                         <div>
