--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <body>
         <div id="banner">
             <p id="titulo">
-                La tecnologia en tus manos
+                La tecnologia es innovadora y fria
             </p>
             <a id="boton" href="menu.html">Entrar</a>
         </div>
+    
     </body>
 </html>
