--- a/productos.html
+++ b/productos.html
@@ -10,7 +10,7 @@
     <Body>
         
         <header id="headerIn">
-            <h1 id="tituloIn">Tecnologias ITT</h1>
+            <h1 id="tituloIn">Tecnologia Aurorus</h1>
             <span id="alinearContenidosIndex"></span>
             <span id="contenidosIndex">
                 <a class="linkIndex" href="menu.html">Inicio</a>
