--- a/inicio.html
+++ b/inicio.html
@@ -9,7 +9,7 @@
     </head>
     <Body>
         <header id="headerIn">
-            <h1 id="tituloIn">Tecnologias ITT</h1>
+            <h1 id="tituloIn">Tecnologia Aurorus</h1>
             <span id="alinearContenidosIndex"></span>
             <span id="contenidosIndex">
                 <a class="linkIndex" href="menu.html">Inicio</a>
